--- a/app/front/view/public/header.html
+++ b/app/front/view/public/header.html
@@ -1,43 +1,48 @@
 <!-- 顶部 -->
 <div class="div_header">
     <div class="content">
-        <div class="divheaderti">
-            欢迎来到广州威速易供应链管理有限公司！
-        </div>
+        <div class="divheaderti">欢迎来到广州威速易供应链管理有限公司！</div>
         <div class="divheali">
-            <li><a href="http://www.gdwse.com:8083/"><img src="__FRONT__/images/wse_02.jpg"></a></li>
-            <li><a href="http://www.gdwse.com:8082/gotoRegister.htm"><img src="__FRONT__/images/wse_03.jpg"></a></li>
+            <li>
+                <a href="/user/login"><img src="__FRONT__/images/wse_02.jpg" /></a>
+            </li>
+            <li>
+                <a href="/user/register"><img src="__FRONT__/images/wse_03.jpg" /></a>
+            </li>
         </div>
     </div>
 </div>
-
 
 <!-- logo位置 -->
 <div class="header_top">
     <div class="content">
         <div class="header_18">
-            <div class="logo"><a id="header1_hlLogo"><img src="__FRONT__/images/33729d63-e64a-4b51-8727-243cc45fdc15.jpg" alt="广东威速易信息科技有限公司 ，跨境电商综合平台-会员登录，威速易一站式跨境供应链服务平台，俄罗斯海外仓、邮政小包、俄罗斯专线、速卖通无忧线上仓"></a>
-            <!-- header | end -->
+            <div class="logo">
+                <a id="header1_hlLogo"><img src="__FRONT__/images/33729d63-e64a-4b51-8727-243cc45fdc15.jpg" alt="广东威速易信息科技有限公司 ，跨境电商综合平台-会员登录，威速易一站式跨境供应链服务平台，俄罗斯海外仓、邮政小包、俄罗斯专线、速卖通无忧线上仓" /></a>
+                <!-- header | end -->
             </div>
             <div class="right_login">
                 <div class="telBox">
                     <div class="bshare-custom icon-medium-plus">
-                        <div class="bsPromo bsPromo2"></div><a title="分享到微信" class="bshare-weixin"
-                            href="javascript:void(0);"></a><a title="分享到QQ空间" class="bshare-qzone"
-                            href="javascript:void(0);"></a><a title="分享到新浪微博" class="bshare-sinaminiblog"></a><a
-                            title="分享到腾讯微博" class="bshare-qqmb"></a><a title="分享到网易微博" class="bshare-neteasemb"></a><a
-                            title="更多平台" class="bshare-more bshare-more-icon more-style-addthis"></a>
+                        <div class="bsPromo bsPromo2"></div>
+                        <a title="分享到微信" class="bshare-weixin" href="javascript:void(0);"></a><a title="分享到QQ空间"
+                            class="bshare-qzone" href="javascript:void(0);"></a><a title="分享到新浪微博"
+                            class="bshare-sinaminiblog"></a><a title="分享到腾讯微博" class="bshare-qqmb"></a><a
+                            title="分享到网易微博" class="bshare-neteasemb"></a><a title="更多平台"
+                            class="bshare-more bshare-more-icon more-style-addthis"></a>
                     </div>
                     <script type="text/javascript" charset="utf-8" src="__FRONT__/js/buttonLite.js"></script>
                     <script type="text/javascript" charset="utf-8" src="__FRONT__/js/bshareC0.js"></script>
 
-                    <p class="clear hetaf"><img src="__FRONT__/images/wse_09.jpg"> <span id="header1_lblHotLine" class="">020-86254345转801</span> </p>
+                    <p class="clear hetaf">
+                        <img src="__FRONT__/images/wse_09.jpg" />
+                        <span id="header1_lblHotLine" class="">020-86254345转801</span>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 <!--导航菜单-->
 <div class="container_ban">
@@ -45,38 +50,68 @@
         <div class="divmenuleft">
             <div id="TopNav_Nav" class="">
                 <nav class="navbar navbar-default" role="navigation">
-                    <div class="navbar-header"><button type="button" class="navbar-toggle collapsed"
-                            data-toggle="collapse" data-target="#bs-example-navbar-collapse-9"><span
-                                class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span
-                                class="icon-bar"></span></button><a class="navbar-brand visible-xs"
-                            href="http://www.gdwse.com/default.html">首 页</a></div>
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-9">
+                            <span class="sr-only"></span><span class="icon-bar"></span><span
+                                class="icon-bar"></span><span class="icon-bar"></span></button><a
+                            class="navbar-brand visible-xs" href="http://www.gdwse.com/default.html">首 页</a>
+                    </div>
                     <div class="collapse navbar-collapse navwrap" id="bs-example-navbar-collapse-9">
                         <ul id="nav" class="nav navbar-nav">
-                            <li><a id="shouye" class="hidden-xs" href="http://www.gdwse.com/default.html"
+                            <li>
+                                <a id="shouye" class="hidden-xs" href="http://www.gdwse.com/default.html"
                                     target="_blabk">首 页</a>
                             </li>
-                            <li><a class="hover_1" href="http://www.gdwse.com/about.html" target="_blabk">关于威速易</a>
+                            <li>
+                                <a class="hover_1" href="/about"  target="_blabk">关于威速易</a>
                                 <ul>
-                                    <li><a href="http://www.gdwse.com/About.aspx#About">公司简介</a></li>
-                                    <li><a href="http://www.gdwse.com/qywh.aspx#qywh">企业文化</a></li>
-                                    <li><a href="http://www.gdwse.com/gszp.aspx#gszp">人才招聘</a></li>
-                                    <li><a href="http://www.gdwse.com/products/category-1.html">跨境咨询</a></li>
+                                    <li>
+                                        <a href="/about">公司简介</a>
+                                    </li>
+                                    <li>
+                                        <a href="/culture">企业文化</a>
+                                    </li>
+                                    <li>
+                                        <a href="/job">人才招聘</a>
+                                    </li>
+                                    <li>
+                                        <a href="/article">跨境咨询</a>
+                                    </li>
                                 </ul>
                             </li>
-                            <li><a class="hover_1" href="http://www.gdwse.com/kddhl.html" target="_blabk">公司产品</a>
+                            <li>
+                                <a class="hover_1" href="http://www.gdwse.com/kddhl.html" target="_blabk">公司产品</a>
                                 <ul>
-                                    <li><a href="http://www.gdwse.com/kddhl.aspx#kddhl">国际快递</a></li>
-                                    <li><a href="http://www.gdwse.com/zxqd.aspx#zxqd">专线渠道</a></li>
-                                    <li><a href="http://www.gdwse.com/elsqd.aspx#elsqd">俄罗斯渠道</a></li>
-                                    <li><a href="http://www.gdwse.com/yzqd.aspx#yzqd">邮政渠道</a></li>
-                                    <li><a href="http://www.gdwse.com/fba.aspx#fba">亚马逊FBA头程</a></li>
+                                    <li>
+                                        <a href="http://www.gdwse.com/kddhl.aspx#kddhl">国际快递</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.gdwse.com/zxqd.aspx#zxqd">专线渠道</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.gdwse.com/elsqd.aspx#elsqd">俄罗斯渠道</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.gdwse.com/yzqd.aspx#yzqd">邮政渠道</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.gdwse.com/fba.aspx#fba">亚马逊FBA头程</a>
+                                    </li>
                                 </ul>
                             </li>
-                            <li><a class="hover_1" href="http://www.gdwse.com/Albums/Default.aspx"
-                                    target="_blabk">跨境平台入驻</a></li>
-                            <li><a class="hover_1" href="http://ru.gdwse.com/" target="_blabk">俄罗斯海外仓</a></li>
-                            <li><a class="hover_1" href="http://47.52.128.219/" target="_blabk">美国海外仓</a></li>
-                            <li><a class="hover_1" href="http://www.gdwse.com/contact.html" target="_blabk">联系我们</a>
+                            <li>
+                                <a class="hover_1" href="http://www.gdwse.com/Albums/Default.aspx"
+                                    target="_blabk">跨境平台入驻</a>
+                            </li>
+                            <li>
+                                <a class="hover_1" href="http://ru.gdwse.com/" target="_blabk">俄罗斯海外仓</a>
+                            </li>
+                            <li>
+                                <a class="hover_1" href="http://47.52.128.219/" target="_blabk">美国海外仓</a>
+                            </li>
+                            <li>
+                                <a class="hover_1" href="http://www.gdwse.com/contact.html" target="_blabk">联系我们</a>
                             </li>
                         </ul>
                     </div>
