--- a/app/front/view/article/index.html
+++ b/app/front/view/article/index.html
@@ -30,6 +30,7 @@
           <div class="pdivnewsheader">
             <h5 class="">跨境咨询</h5>
             
+            <!-- 位置 -->
             <div class="hidden_m">
               <img alt="" src="__FRONT__/images/wse_diz.png" />
               <a href="/">你当前的位置：首 页 &gt; &gt;</a>
@@ -45,7 +46,7 @@
             <ul>
               <li>
                 <div class="pdivnewslitb">
-                  <a href="http://www.gdwse.com/products/83.html">
+                  <a href="/article/1">
                     <img class="pdivnewslitbimg" src="__FRONT__/images/2018012914433785687437.jpg" alt="做好视频营销的六大要点，还不速速上车！" title="做好视频营销的六大要点，还不速速上车！" style="width: 170px; height: 128px" />
                   </a>
                 </div>
