--- a/app/front/view/public/article_left.html
+++ b/app/front/view/public/article_left.html
@@ -8,7 +8,7 @@
         <div class="divrightLit">
             <ul>
                 <li><a href="/article">跨境咨询</a></li>
-                <li><a href="/article/news">公司新闻</a></li>
+                <li><a href="/news">公司新闻</a></li>
             </ul>
         </div>
     </div>
