--- a/app/front/view/public/banner.html
+++ b/app/front/view/public/banner.html
@@ -3,6 +3,9 @@
         width: 100%;
         height: 400px;
     }
+    .layui-carousel-ind li.layui-this {
+        background-color: #0f9f57;
+    }
 </style>
 <div id="Banner" class="div_banner_h">
     <div class="layui-carousel" id="test1">
