--- a/app/front/view/public/footer.html
+++ b/app/front/view/public/footer.html
@@ -7,18 +7,14 @@
                 <div id="News1" class="">
                     <div class="footdiv_menulis_d">
                         <ul><a class="footdiv_menulis_d_h3" target="_parent"
-                                href="http://www.gdwse.com/articles/category-1.html">新手指南</a>
-                            <li><a class="meldi" target="_parent" href="http://www.gdwse.com/articles/38.html"
-                                    title="下单指南">下单指南</a>
+                                href="/guide">新手指南</a>
+                            <li><a class="meldi" target="_parent" href="/guide/1" title="下单指南">下单指南</a>
                             </li>
-                            <li><a class="meldi" target="_parent" href="http://www.gdwse.com/articles/20.html"
-                                    title="退件处理">退件处理</a>
+                            <li><a class="meldi" target="_parent" href="/guide/2" title="退件处理">退件处理</a>
                             </li>
-                            <li><a class="meldi" target="_parent" href="http://www.gdwse.com/articles/19.html"
-                                    title="自助账单">自助账单</a>
+                            <li><a class="meldi" target="_parent" href="/guide/3" title="自助账单">自助账单</a>
                             </li>
-                            <li><a class="meldi" target="_parent" href="http://www.gdwse.com/articles/18.html"
-                                    title="包裹追踪">包裹追踪</a>
+                            <li><a class="meldi" target="_parent" href="/guide/4" title="包裹追踪">包裹追踪</a>
                             </li>
                         </ul>
                     </div>
@@ -27,21 +23,22 @@
                 <div class="footdiv_menulis_d">
                     <a class="footdiv_menulis_d_h3">主营产品</a>
                     <ul>
-                        <li><a target="_parent" href="http://www.gdwse.com:8686/kddhl.aspx#kddhl">国际快递</a></li>
-                        <li><a target="_parent" href="http://www.gdwse.com:8686/zxqd.aspx#zxqd">专线渠道</a></li>
-                        <li><a target="_parent" href="http://www.gdwse.com:8686/elsqd.aspx#elsqd">俄罗斯渠道</a></li>
-                        <li><a target="_parent" href="http://www.gdwse.com:8686/yzqd.aspx#yzqd">邮政渠道</a></li>
-                        <li><a target="_parent" href="http://www.gdwse.com:8686/fba.aspx#fba">FBA</a></li>
+                        <li><a target="_parent" href="/logistics/1">国际快递</a></li>
+                        <li><a target="_parent" href="/logistics/2">专线渠道</a></li>
+                        <li><a target="_parent" href="/logistics/3">俄罗斯渠道</a></li>
+                        <li><a target="_parent" href="/logistics/4">邮政渠道</a></li>
+                        <li><a target="_parent" href="/logistics/5">FBA</a></li>
                     </ul>
                 </div>
 
 
                 <div id="News2" class="">
                     <div class="footdiv_menulis_d">
-                        <ul><a class="footdiv_menulis_d_h3" target="_parent"
-                                href="http://www.gdwse.com/articles/category-2.html">增值服务</a>
-                            <li><a class="meldi" target="_parent" href="http://www.gdwse.com/articles/26.html"
-                                    title="燃油附加费">燃油附加费</a>
+                        <ul>
+                            <a class="footdiv_menulis_d_h3" target="_parent"
+                                href="/help/2">增值服务</a>
+                            <li>
+                                <a class="meldi" target="_parent" href="/help/detail/2" title="燃油附加费">燃油附加费</a>
                             </li>
                         </ul>
                     </div>
@@ -51,9 +48,9 @@
                     <a class="footdiv_menulis_d_h3">关于我们</a>
                     <ul>
                         <ul id="Nav" class="">
-                            <li><a target="_parent" href="http://www.gdwse.com/about.html">公司简介</a></li>
-                            <li><a target="_parent" href="http://www.gdwse.com/contact.html">联系我们</a></li>
-                            <li><a target="_parent" href="http://www.gdwse.com/gszp.html">加入我们</a></li>
+                            <li><a target="_parent" href="/about">公司简介</a></li>
+                            <li><a target="_parent" href="/contact">联系我们</a></li>
+                            <li><a target="_parent" href="/job">加入我们</a></li>
                         </ul>
 
                     </ul>
