--- a/app/front/view/public/header.html
+++ b/app/front/view/public/header.html
@@ -81,28 +81,27 @@
                                 </ul>
                             </li>
                             <li>
-                                <a class="hover_1" href="http://www.gdwse.com/kddhl.html" target="_blabk">公司产品</a>
+                                <a class="hover_1" href="/logistics" target="_blabk">公司产品</a>
                                 <ul>
                                     <li>
-                                        <a href="http://www.gdwse.com/kddhl.aspx#kddhl">国际快递</a>
+                                        <a href="/logistics/1">国际快递</a>
                                     </li>
                                     <li>
-                                        <a href="http://www.gdwse.com/zxqd.aspx#zxqd">专线渠道</a>
+                                        <a href="/logistics/2">专线渠道</a>
                                     </li>
                                     <li>
-                                        <a href="http://www.gdwse.com/elsqd.aspx#elsqd">俄罗斯渠道</a>
+                                        <a href="/logistics/3">俄罗斯渠道</a>
                                     </li>
                                     <li>
-                                        <a href="http://www.gdwse.com/yzqd.aspx#yzqd">邮政渠道</a>
+                                        <a href="/logistics/4">邮政渠道</a>
                                     </li>
                                     <li>
-                                        <a href="http://www.gdwse.com/fba.aspx#fba">亚马逊FBA头程</a>
+                                        <a href="/logistics/5">亚马逊FBA头程</a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a class="hover_1" href="http://www.gdwse.com/Albums/Default.aspx"
-                                    target="_blabk">跨境平台入驻</a>
+                                <a class="hover_1" href="/platform" target="_blabk">跨境平台入驻</a>
                             </li>
                             <li>
                                 <a class="hover_1" href="http://ru.gdwse.com/" target="_blabk">俄罗斯海外仓</a>
@@ -111,7 +110,7 @@
                                 <a class="hover_1" href="http://47.52.128.219/" target="_blabk">美国海外仓</a>
                             </li>
                             <li>
-                                <a class="hover_1" href="http://www.gdwse.com/contact.html" target="_blabk">联系我们</a>
+                                <a class="hover_1" href="/contact"  target="_blabk">联系我们</a>
                             </li>
                         </ul>
                     </div>
