--- a/app/front/view/article/news.html
+++ b/app/front/view/article/news.html
@@ -29,11 +29,12 @@
           <div class="pdivnewsheader">
             <h5 class="">公司新闻</h5>
 
+            <!-- 位置 -->
             <div class="hidden_m">
               <img alt="" src="__FRONT__/images/wse_diz.png" />
               <a href="/">你当前的位置：首 页 &gt; &gt;</a>
               <a href="/about">关于威速易&gt; &gt;</a>
-              <a class="hover_1" href="/article/news">公司新闻</a>
+              <a class="hover_1" href="/news">公司新闻</a>
             </div>
 
           </div>
@@ -44,8 +45,7 @@
             <ul>
               <li>
                 <div class="pdivnewslitb">
-                  <a href="http://www.gdwse.com/products/2376.html"
-                    ><img
+                  <a href="/news/1" target="_blank"><img
                       class="pdivnewslitbimg"
                       src="__FRONT__/images/2020061018093085916945.jpg"
                       alt="做自发货一年亏了80W，暴乱致大量配送延误！"
