--- a/public/static/front/css/main.css
+++ b/public/static/front/css/main.css
@@ -324,7 +324,7 @@ ul.footerInfo li {
 .pager input.PagerInput{border:solid 1px #4FACE9; height:16px; margin:0 5px -2px 0; text-align:center}
 .pager a.Pager{text-decoration:none;}
 .CustomInfo{ display:none}
-.pageContent{ float:left; width:100%}
+.pageContent{ float:left; width:100%; padding: 16px 0px;}
 .pageContent div.a{ color:#0f9f57;}
 .pageContent .pager{ text-align:center; padding:5px}
 .pageContent .pager a{ padding:5px; text-decoration:none; font-size:9pt; color:#333}
