--- a/public/static/admin/lib/xadmin/css/font.css
+++ b/public/static/admin/lib/xadmin/css/font.css
@@ -1,4 +1,5 @@
 @font-face {
+  /* layui 2.4.5 */
   font-family: 'iconfont';
   src: url('../fonts/iconfont.eot');
   src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
@@ -6,6 +7,17 @@
   url('../fonts/iconfont.ttf') format('truetype'),
   url('../fonts/iconfont.svg#iconfont') format('svg');
 }
+
+@font-face {
+  /* layui 2.7.6 */
+  font-family: 'iconfont';
+  src: url('../font/iconfont.eot');
+  src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'),
+  url('../font/iconfont.woff') format('woff'),
+  url('../font/iconfont.ttf') format('truetype'),
+  url('../font/iconfont.svg#iconfont') format('svg');
+}
+
 .iconfont{
   font-family:"iconfont" !important;
   font-size:16px;font-style:normal;
