--- a/app/admin/view/public/base.html
+++ b/app/admin/view/public/base.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="__XADMIN__/css/xadmin.css">
     <script src="__XADMIN__/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="__XADMIN__/js/xadmin.js"></script>
+    <script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
+    <script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
+    <script src="__COMMON__/js/common.js" charset="utf-8"></script>
 </head>
 {block name="load"}{/block}
 
