--- a/app/admin/view/public/base.html
+++ b/app/admin/view/public/base.html
@@ -16,6 +16,10 @@
     <script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
     <script src="__COMMON__/js/common.js" charset="utf-8"></script>
 </head>
+<script>
+    // 验证登录
+    isAdminLogin();
+</script>
 {block name="load"}{/block}
 
 <body>
