--- a/app/admin/view/admin/update.html
+++ b/app/admin/view/admin/update.html
@@ -1,5 +1,5 @@
 {extend name="public/base" /}
-{block name="title"}管理员保存{/block}
+{block name="title"}管理员更新{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -34,7 +34,8 @@
                     手机
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="phone" name="phone" autocomplete="off" class="layui-input">
+                    <input type="text" id="phone" name="phone" autocomplete="off"
+                        class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
                     联系手机
@@ -45,7 +46,8 @@
                     微信
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="L_email" name="email" lay-verify="" autocomplete="off" class="layui-input">
+                    <input type="text" id="L_email" name="email" required="" lay-verify="" autocomplete="off"
+                        class="layui-input">
                 </div>
             </div>
             <!-- <div class="layui-form-item">
@@ -61,8 +63,8 @@
                     <span class="x-red">*</span>密码
                 </label>
                 <div class="layui-input-inline">
-                    <input type="password" id="L_password" name="password" required="" lay-verify="password"
-                        autocomplete="off" class="layui-input">
+                    <input type="password" id="L_password" name="password" required="" lay-verify="password" autocomplete="off"
+                        class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
                     6到50个字符
@@ -73,12 +75,12 @@
                     <span class="x-red">*</span>确认密码
                 </label>
                 <div class="layui-input-inline">
-                    <input type="password" id="L_password_confirm" name="password_confirm" required=""
-                        lay-verify="password_confirm" autocomplete="off" class="layui-input">
+                    <input type="password" id="L_password_confirm" name="password_confirm" required="" lay-verify="password_confirm"
+                        autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">状态</label>
+                <label class="layui-form-label">单选框</label>
                 <div class="layui-input-block">
                     <input type="radio" name="status" value="1" title="开启" checked>
                     <input type="radio" name="status" value="0" title="关闭">
@@ -117,8 +119,27 @@
                 }
             }
         });
-        
-        layui_ajax_save(form, '/admin/save', layer);
+
+        //监听提交
+        form.on('submit(form)', function (data) {
+            console.log(data.field);
+            //发异步，把数据提交给php
+            $.ajax({
+                type: "PUT",
+                contentType: "application/x-www-form-urlencoded",
+                url: '/admin/update',
+                data: data.field,
+                success: function (res) {
+                    if (res.code === config('failed')) {
+                        layer.msg(res.msg, { icon: 2 });
+                    } else if (res.code === config('success')) {
+                        layer.msg(res.msg);
+                    }
+                }
+            });
+
+            return false;
+        });
 
     });
 </script>
