--- a/app/admin/view/home/index.html
+++ b/app/admin/view/home/index.html
@@ -81,7 +81,7 @@
                         <a onclick="xadmin.open('切换帐号','http://www.baidu.com')">切换帐号</a>
                     </dd>
                     <dd>
-                        <a href="/view/logout.html">退出</a>
+                        <a href="/view/logout">退出</a>
                     </dd>
                 </dl>
             </li>
