--- a/app/admin/view/admin/save.html
+++ b/app/admin/view/admin/save.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">状态</label>
+                <label class="layui-form-label">登录状态</label>
                 <div class="layui-input-block">
                     <input type="radio" name="status" value="1" title="开启" checked>
                     <input type="radio" name="status" value="0" title="关闭">
