--- a/app/admin/view/admin/password.html
+++ b/app/admin/view/admin/password.html
@@ -1,5 +1,5 @@
 {extend name="public/base" /}
-{block name="title"}管理员更新{/block}
+{block name="title"}更改密码{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -34,8 +34,7 @@
                     手机
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="phone" name="phone" autocomplete="off"
-                        class="layui-input">
+                    <input type="text" id="phone" name="phone" autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
                     联系手机
@@ -46,8 +45,7 @@
                     微信
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="L_email" name="email" required="" lay-verify="" autocomplete="off"
-                        class="layui-input">
+                    <input type="text" id="L_email" name="email" lay-verify="" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <!-- <div class="layui-form-item">
@@ -59,31 +57,10 @@
                 </div>
             </div> -->
             <div class="layui-form-item">
-                <label for="L_password" class="layui-form-label">
-                    <span class="x-red">*</span>密码
-                </label>
-                <div class="layui-input-inline">
-                    <input type="password" id="L_password" name="password" required="" lay-verify="password" autocomplete="off"
-                        class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    6到50个字符
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="L_password_confirm" class="layui-form-label">
-                    <span class="x-red">*</span>确认密码
-                </label>
-                <div class="layui-input-inline">
-                    <input type="password" id="L_password_confirm" name="password_confirm" required="" lay-verify="password_confirm"
-                        autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">单选框</label>
+                <label class="layui-form-label">登录状态</label>
                 <div class="layui-input-block">
-                    <input type="radio" name="status" value="1" title="开启" checked>
-                    <input type="radio" name="status" value="0" title="关闭">
+                    <input type="radio" id="status" name="status" value="1" title="开启">
+                    <input type="radio" id="status" name="status" value="0" title="关闭">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -93,11 +70,28 @@
                     保存
                 </button>
             </div>
+
+            <input type="hidden" id="id" name="id" required="" value="">
         </form>
     </div>
 </div>
 <script>
+
+    // 获取数据
+    var data = ajax_read('/admin/read');
+    console.log(data);
+
+    // 表单赋值
+    $('#id').val(data.id);
+    $('#username').val(data.username);
+    $('#real_name').val(data.real_name);
+    $('#phone').val(data.phone);
+    $('#wechat').val(data.wechat);
+    $('input[name="status"][value="' + data.status + '"]').attr('checked', true);
+    
+    // layui
     layui.use(['form', 'layer'], function () {
+        
         $ = layui.jquery;
         var form = layui.form,
             layer = layui.layer;
@@ -111,35 +105,11 @@
                 if (value.length < 2 || value.length > 25) {
                     return '登录名为2到25个字符！';
                 }
-            },
-            password: [/(.+){6,50}$/, '密码必须6到50位'],
-            password_confirm: function (value) {
-                if ($('#L_password').val() != $('#L_password_confirm').val()) {
-                    return '两次密码不一致';
-                }
             }
         });
 
-        //监听提交
-        form.on('submit(form)', function (data) {
-            console.log(data.field);
-            //发异步，把数据提交给php
-            $.ajax({
-                type: "PUT",
-                contentType: "application/x-www-form-urlencoded",
-                url: '/admin/update',
-                data: data.field,
-                success: function (res) {
-                    if (res.code === config('failed')) {
-                        layer.msg(res.msg, { icon: 2 });
-                    } else if (res.code === config('success')) {
-                        layer.msg(res.msg);
-                    }
-                }
-            });
-
-            return false;
-        });
+        // 更新数据
+        layui_ajax_update(form, '/admin/update', layer);
 
     });
 </script>
